--- a/client/src/app/pages/create-profile/create-profile.component.html
+++ b/client/src/app/pages/create-profile/create-profile.component.html
@@ -240,3 +240,53 @@
 
 <!-- Create_Profile_Work end -->
 
+<!-- Create_Profile_Skills start -->
+
+<div *ngIf="selectedPageIndex===5" class="container {{profileCreationPages[5]}}">
+  <div class="container__full">
+    <div class="skills-form">
+      <h3 class="skills-form__title">
+        SKILLS & INTERESTS
+      </h3>
+      <div class="skills-form__field search">
+        <h3>Skills <span class="limit">8</span></h3>
+        <mat-form-field appearance="standard" class="search">
+          <mat-icon matSuffix>search</mat-icon>
+          <input matInput placeholder="Search skills" type="text">
+        </mat-form-field>
+        <div class="skills">
+          <simple-tag type="gray" title="Motion Design" ellipseTag="true" value="4"></simple-tag>
+          <simple-tag type="gray" title="Indesign" ellipseTag="true" value="3"></simple-tag>
+          <simple-tag type="gray" title="Data Science" ellipseTag="true" value="4"></simple-tag>
+          <simple-tag type="gray" title="Adobe XD" ellipseTag="true" value="4"></simple-tag>
+          <simple-tag type="gray" title="Adobe Photoshop" ellipseTag="true" value="5"></simple-tag>
+          <simple-tag type="gray" title="Adobe Indesign" ellipseTag="true" value="5"></simple-tag>
+          <simple-tag type="gray" title="Node JS" ellipseTag="true" value="1"></simple-tag>
+          <simple-tag type="gray" title="Adobe After Effects" ellipseTag="true" value="1"></simple-tag>
+        </div>
+      </div>
+      <div class="skills-form__field search">
+        <h3>Interests <span class="limit">8</span></h3>
+        <mat-form-field appearance="standard" class="search">
+          <mat-icon matSuffix>search</mat-icon>
+          <input matInput placeholder="Search skills" type="text">
+        </mat-form-field>
+        <div class="skills">
+          <simple-tag type="gray" title="Software Engineering"></simple-tag>
+          <simple-tag type="gray" title="Programing"></simple-tag>
+          <simple-tag type="gray" title="Machine Learning"></simple-tag>
+          <simple-tag type="gray" title="Medicare"></simple-tag>
+          <simple-tag type="gray" title="Node JS"></simple-tag>
+          <simple-tag type="gray" title="Python"></simple-tag>
+          <simple-tag type="gray" title="HTML5"></simple-tag><simple-tag type="gray" title="Adobe Photoshop"></simple-tag>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container__full">
+    <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()"></action-button>
+  </div>
+</div>
+
+<!-- Create_Profile_Skills end -->
+
