--- a/client/src/app/pages/create-profile/create-profile.component.scss
+++ b/client/src/app/pages/create-profile/create-profile.component.scss
@@ -218,7 +218,8 @@ p {
   }
   &.profile-education,
   &.profile-project,
-  &.profile-publication {
+  &.profile-publication,
+  &.profile-links {
     position: relative;
     action-button.btn-next {
       min-width: 130px;
@@ -230,7 +231,8 @@ p {
       @include flex(row, center, center);
       .education-form,
       .project-form,
-      .publication-form {
+      .publication-form,
+      .links-form {
         width: 75%;
         max-width: 880px;
         padding: 60px;
@@ -267,6 +269,10 @@ p {
           }
           mat-form-field {
             width: 100%;
+            img {
+              width: 30px;
+              height: 30px;
+            }
           }
         }
       }
@@ -468,7 +474,8 @@ p {
     }
     &.profile-education,
     &.profile-project,
-    &.profile-publication {
+    &.profile-publication,
+    &.profile-links {
       action-button.btn-next {
         position: unset;
         margin-top: 30px;
@@ -476,7 +483,8 @@ p {
       .container__full {
         .education-form,
         .project-form,
-        .publication-form {
+        .publication-form,
+        .links-form {
           width: 85%;
           max-width: 600px;
           padding: 40px;
@@ -487,6 +495,12 @@ p {
             }
             &.btn {
               margin-top: 40px;
+            }
+            mat-form-field {
+              img {
+                width: 26px;
+                height: 26px;
+              }
             }
           }
         }
@@ -612,14 +626,16 @@ p {
     }
     &.profile-education,
     &.profile-project,
-    &.profile-publication {
+    &.profile-publication,
+    &.profile-links {
       action-button.btn-next {
         margin-top: 20px;
       }
       .container__full {
         .education-form,
         .project-form,
-        .publication-form {
+        .publication-form,
+        .links-form {
           width: 100%;
           max-width: 450px;
           padding: 30px;
@@ -630,6 +646,12 @@ p {
             }
             &.btn {
               margin-top: 30px;
+            }
+            mat-form-field {
+              img {
+                width: 24px;
+                height: 24px;
+              }
             }
           }
         }
